--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,24 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.4.RELEASE")
+        classpath("gradle.plugin.com.boxfuse.client:flyway-release:4.2.0")
     }
+}
+
+plugins {
+    id "org.flywaydb.flyway" version "4.2.0"
 }
 
 apply plugin: "java"
 apply plugin: "org.springframework.boot"
+apply plugin: "org.flywaydb.flyway"
 
 repositories {
     mavenCentral()
@@ -19,12 +28,32 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
-}
 
-/*bootRun.environment([
-        "WELCOME_MESSAGE": "hello",
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.mariadb.jdbc:mariadb-java-client:2.0.2")
+}
+def development_db_url = "jdbc:mariadb://localhost:3306/tracker_dev?user=tracker"
+bootRun.environment([
+        "SPRING_DATASOURCE_URL": development_db_url,
+])
+def test_db_url = "jdbc:mariadb://localhost:3306/tracker_test?user=tracker"
+test.environment([
+        "SPRING_DATASOURCE_URL": test_db_url,
 ])
 
-test.environment([
+/*test.environment([
         "WELCOME_MESSAGE": "hello from env",
 ])*/
+
+import org.flywaydb.gradle.task.FlywayMigrateTask
+
+flyway {
+    url = development_db_url
+    user = 'tracker'
+    password = ''
+    locations = ["filesystem:databases/tracker/migrations"]
+}
+
+task testMigrate(type: FlywayMigrateTask) {
+    url = test_db_url
+}
