--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.mariadb.jdbc:mariadb-java-client:2.0.2")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
 }
 def development_db_url = "jdbc:mariadb://localhost:3306/tracker_dev?user=tracker"
 bootRun.environment([
