--- a/ci/deployments/manifest-production.yml
+++ b/ci/deployments/manifest-production.yml
@@ -3,3 +3,4 @@ applications:
 - name: pal-tracker-production
   path: ../../build/libs/pal-tracker.jar
   host: rk-pal-tracker-production
+SECURITY_FORCE_HTTPS: True
