--- a/ci/deployments/manifest-review.yml
+++ b/ci/deployments/manifest-review.yml
@@ -3,3 +3,4 @@ applications:
 - name: pal-tracker-review
   path: ../../build/libs/pal-tracker.jar
   host: rk-pal-tracker-review
+SECURITY_FORCE_HTTPS: True
